content changes & some structural changes

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
-    <link rel="stylesheet" href="asset/reset.css" />
-    <link rel="stylesheet" href="asset/style.css" />
+    <link rel="stylesheet" href="./asset/css/reset.css" />
+    <link rel="stylesheet" href="./asset/css/style.css" />
 </head>
 
 <body>
     <header>
 
-        <h1>Employee name</h1>
+        <h1>Ronald</h1>
         <nav>
             <a href="#about-me">About Me</a>
             <a href="#work">Work</a>
@@ -22,9 +22,9 @@
     </nav>
 </header>
 
-<section class="subtitle">
-    <p> Subtitle<p>
-</section>
+<div class="subtitle">
+    <p class="subtitle-line"></p>Weclome to my homepage!</p>
+</div>
 
 <main class="content">
     <section id="about-me">
@@ -33,7 +33,9 @@
         </div>
 
         <div class="right-content">
-            <p>Introduction Hello testing 123 It is testing the float working or not</p>
+            <p>Introduction of Ronald. 
+                Studied ICT (Computer Science) and Physics in high school. And studied 2 years of TAFE (Overseas). Then came to Australia as a international student to study bachelor of Business (Management). Currently studying full stack web development as a career or skills.             
+                It's very weird to see someone chosen the seemingly unrelative subject to study. I am a "Slashes" (means someone prefer a diverse lifestyle or with multi different identities). I am also a logical thinker at sorts, both Maths, Computer Science, Business is highly surrounded with chanllenges. </p>
         </div>
     </section>
 
@@ -43,11 +45,12 @@
         </div>
 
         <div class="right-content">
-            <section class="work-hilight"><p>a123</p></section>
-            <section class="work"><a>hi</a></section>
-            <section class="work"><a>hello</a></section>
-            <section class="work"></section>
-            <section class="work"></section>
+            <section class="work-hilight" id="hilight"><a href="#hilight">Web Development Project</a></section>
+
+            <section class="work" id="uni"><a href="#uni">bachelor Study</section>
+            <section class="work" id="other"><a href="#other">Other Studies</a></section>
+            <section class="work">Placeholders</section>
+            <section class="work">Placeholder</section>
         </div>
     </section>
 
@@ -56,7 +59,11 @@
             <h2>Contact Me</h2>
         </div>
         <div class="right-content">
-            <p>Links</p>
+            <a href="#mobile" id="mobile">Mobile</a>
+            <a href="mailto:ronaldwong39@gmail.com"> ronaldwong39@gmail.com</a>
+            <a href="https://github.com/Aurorachama">Github</a>
+            <a href="https://twitter.com/">Twitter</a>
+            <a href="https://www.linkedin.com/">Linkedin</a>
         </div>
     </section>
 </main>
