--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="right-content">
             <section class="work-hilight" id="hilight"><a href="#hilight">Web Development Project</a></section>
 
-            <section class="work" id="uni"><a href="#uni">bachelor Study</section>
+            <section class="work" id="uni"><a href="#uni">bachelor Study</a></section>
             <section class="work" id="other"><a href="#other">Other Studies</a></section>
             <section class="work">Placeholders</section>
             <section class="work">Placeholder</section>
